Bug 918706 - Return NS_ERROR_DOM_SYNTAX_ERR if method is invalid, r=khuey